--- a/qingimage.html
+++ b/qingimage.html
@@ -9,7 +9,7 @@
 	<div class="row clearfix">
 		<div class="col-md-12 column">
 			<h2>
-				清朝末年外国人拍摄的当时国人肖像
+				em………排版有点儿乱，不影响、凑合看
 			</h2>
 			<p>
 				
